# micrlhf-progress

./: .gitignore  .gitmodules  70b.ipynb  70b_sample.ipynb  README.md  act_eng.ipynb  collect_clean.py  ds_gen.ipynb  ds_gen.py  ds_genma.py  eval_tqa_claude.py  feature_vis.ipynb  finetune.ipynb  gemma-q.ipynb  gemma.ipynb  gemma2.ipynb  icl_circuit.ipynb  llama2_model.py  loss_ito.ipynb  main.ipynb  main.py  melbo.ipynb  mmlu.ipynb  pyproject.toml  refusal.ipynb  refusal_eval.ipynb  scratch.ipynb  state_util.py  stest.py  sycophancy.ipynb  sycophancy_utils.py  task_vector_utils.py  task_vectors.ipynb  test_storage.ipynb  tokenizer.py  translation_saes.ipynb  util.py
micrlhf/: adam_8bit.py  caching_llama.py  flash.py  gguf.py  llama.py  offload.ipynb  offload.py  oryx_state.py  quantizers.py  sampling.py  scan.py  sharding.py
micrlhf/utils/: activation_manipulation.py  ito.py  load_sae.py  mmlu_eval.py  vector_storage.py
sprint/: aft.ipynb  all_refusals.ipynb  all_tvc_tune.sh  attn_linear_effects.ipynb  attn_linear_effects.py  attn_linear_effects_full_block.py  build_charts.ipynb  check.ipynb  circuit_ablation_script.py  circuit_ablation_script_2.py  circuit_finding.ipynb  cold.ipynb  collect_core_sfc_features.py  collect_core_sfc_features_script.py  epo_gemma.ipynb  epo_gemma_jb.ipynb  epo_gemma_jb.py  feature_vis.ipynb  feature_vis_epo.ipynb  gemma_comparison.ipynb  gemma_task_features.ipynb  graph_analysis.ipynb  heatmaps_script.py  heatmaps_script_positive.py  icl_accuracy.ipynb  icl_circuit_ablation_plotting.ipynb  icl_feature_ablation.ipynb  icl_feature_ablation_gemma_2.ipynb  icl_feature_activation_maps.ipynb  icl_feature_activation_maps_detectors.ipynb  icl_feature_heatmaps.ipynb  icl_feature_heatmaps_positive.ipynb  icl_feature_heatmaps_positive_gemma_2_16k.ipynb  icl_feature_heatmaps_tv_subtract.ipynb  icl_feature_steering.ipynb  icl_feature_steering_gemma_2.ipynb  icl_feature_timeline.ipynb  icl_heads.ipynb  icl_heads_attribution_patching.ipynb  icl_sfc.ipynb  (+51 more)
sprint/self_explanation/: rate.py  rate_embed.py  rate_new.py  script.py
src/: caching_llama.py  gguf.py  llama.py  quantizers.py  sampling.py  tokenizer.py
tests/: test_matmul_4bit.py  test_matmul_6bit.py  test_matmul_8bit.py
utils/: activation_manipulation.py  load_sae.py
