[tool.poetry]
name = "micrlhf-progress"
version = "0.0.1"
description = ""
authors = ["\"n\""]
readme = "README.md"
packages = [
    { include = "micrlhf" },
]

[tool.poetry.dependencies]
python = "^3.12"
sentencepiece = "^0.2.0"
penzai = "^0.1.0"
jax = {version = "^0.4.26", extras = ["tpu"]}
tiktoken = "^0.6.0"
tqdm = "^4.66.2"
datasets = "^2.19.1"

[[tool.poetry.source]]
name = "google-libtpu"
url = "https://storage.googleapis.com/jax-releases/libtpu_releases.html"
priority = "supplemental"



[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
isort = "^5.13.2"
nbconvert = "^7.16.4"
transformers = "^4.40.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
