[tool.poetry]
name = "micrlhf-progress"
version = "0.0.1"
description = ""
authors = ["\"n\""]
readme = "README.md"
packages = [
    { include = "micrlhf" },
]

[tool.poetry.dependencies]
python = "^3.12"
sentencepiece = "^0.2.0"
penzai = "^0.1.0"
jax = {version = "^0.4.26", extras = ["tpu"]}
tiktoken = "^0.6.0"
tqdm = "^4.66.2"
datasets = "^2.19.1"
orbax = "^0.1.9"
torch = {version = "^2.2.2+cpu", source = "torch-cpu"}
appdirs = "^1.4.4"
huggingface-hub = "^0.23.0"

[[tool.poetry.source]]
name = "google-libtpu"
url = "https://storage.googleapis.com/jax-releases/libtpu_releases.html"
priority = "supplemental"

[[tool.poetry.source]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
isort = "^5.13.2"
nbconvert = "^7.16.4"
transformers = "^4.40.2"
matplotlib = "^3.8.4"
kagglehub = "^0.2.5"
ipywidgets = "^8.1.2"
orbax = "^0.1.9"
optax = "^0.2.2"
more-itertools = "^10.2.0"
rich = "^13.7.1"
replicate = "^0.26.0"
distribute = "^0.7.3"
python-dotenv = "^1.0.1"
anthropic = "^0.26.1"
jax-smi = "^1.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
